--- a/Readiculous.WebApp/Views/DashboardAdmin/AdminScreen.cshtml
+++ b/Readiculous.WebApp/Views/DashboardAdmin/AdminScreen.cshtml
@@ -71,8 +71,8 @@
                 @foreach (var reviewer in Model.TopReviewers)
                 {
                     <div class="reviewer-card d-flex align-items-center">
-                        <div class="rank-number">@(Model.TopReviewers.IndexOf(reviewer) + 1)</div> <!-- dynamic rank -->
-                        <div class="user-avatar">US</div> <!-- assuming you have Initials -->
+                        <div class="rank-number">@(Model.TopReviewers.IndexOf(reviewer) + 1)</div>
+                        <div class="user-avatar">US</div> 
                         <div class="flex-grow-1">
                             <div>@reviewer.UserName</div>
                             <div class="d-flex align-items-center gap-2 small">
